2001-06-01  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.c, gnome-icon-selector-component.c:
	Use gnome_selector_set_vfs_filter() to set the directory filter.

2001-05-23  Joe Shaw  <joe@ximian.com>

	* gnome-image-entry-component.c (drag_data_received): Change
	GNOME_DESKTOP_ITEM_LOAD_NO_SYNC to GNOME_DESKTOP_ITEM_LOAD_NO_DROP
	to make it build again.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.c, gnome-icon-selector-component.c:
	Use the new tristate properties and set the default values here.

2001-05-20  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.c: Removed all properties and use
	our client's property bag.

2001-05-20  Martin Baulig  <baulig@suse.de>

	* libgnomeui-components.c: Use GnomeSelectorFactory

2001-05-19  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.[ch]: Moved here from ../libgnomeui.
	* gnome-icon-selector-component.[ch]: Likewise.

	* libgnomeui-components.c: New file.

	* GNOME_UI_Components.oaf.in: New file.
